fixed  rem error from react console. fixed memory leak warning. merged wrapper styles from multiple files into one file. fixed class instead of className in several places. shifted height to min-height

--- a/src/styles/_wrapper.scss
+++ b/src/styles/_wrapper.scss
@@ -1,5 +1,8 @@
-.wrapper{
-    overflow: hidden;
-    background-color: black;
-    height: 100vh;
+@use "./variables" as *;
+
+.wrapper {
+  overflow: hidden;
+  background-color: $background-color;
+  width: auto;
+  padding: 0 1rem;
 }
